Changed Index file

--- a/MyFisrtNetCoreWebApp/Pages/Index.cshtml
+++ b/MyFisrtNetCoreWebApp/Pages/Index.cshtml
@@ -44,7 +44,7 @@
         <tr>
             <td>TCS</td>
             <td>Galaxy IT Park</td>
-            <td>Noida</td>
+            <td>Delhi</td>
         </tr>
         <tr>
             <td>Infosys</td>
